--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,48 +1,51 @@
 /* src/components/Navbar.css */
 .navbar {
-    background-color: #fff;
-    border-bottom: 1px solid #ddd;
+  background-color: #000 !important;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.navbar .navbar-brand {
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+}
+
+.navbar .navbar-brand:hover {
+  color: #ccc;
+}
+
+.navbar .nav-link {
+  font-size: 16px;
+  color: #fff;
+  transition: color 0.3s ease;
+}
+
+.navbar .nav-link:hover {
+  color: #007bff;
+}
+
+.navbar .navbar-toggler {
+  border: none;
+}
+
+.navbar .navbar-toggler:focus {
+  outline: none;
+}
+
+.navbar-dark .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+@media (max-width: 992px) {
+  .navbar .navbar-collapse {
+    background-color: #000;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+    border-radius: 8px;
+    margin-top: 10px;
+    padding: 10px;
   }
-  
-  .navbar .navbar-brand {
-    font-size: 24px;
-    font-weight: bold;
-    color: #007bff;
-  }
-  
-  .navbar .navbar-brand:hover {
-    color: #0056b3;
-  }
-  
+
   .navbar .nav-link {
-    font-size: 16px;
-    color: #555;
-    transition: color 0.3s ease;
+    color: #fff;
   }
-  
-  .navbar .nav-link:hover {
-    color: #007bff;
-  }
-  
-  .navbar .navbar-toggler {
-    border: none;
-  }
-  
-  .navbar .navbar-toggler:focus {
-    outline: none;
-  }
-  
-  @media (max-width: 992px) {
-    .navbar .navbar-collapse {
-      background-color: #fff;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
-      margin-top: 10px;
-      padding: 10px;
-    }
-  }
-  
+}
