--- a/src/components/KnowledgeDetail.css
+++ b/src/components/KnowledgeDetail.css
@@ -1,6 +1,6 @@
 /* src/components/KnowledgeDetail.css */
 .knowledge-detail {
-    margin-left: 270px; /* To account for the sidebar width */
+    margin-left: 270px;
     padding: 20px;
   }
   
