--- a/src/pages/Experience.css
+++ b/src/pages/Experience.css
@@ -16,17 +16,11 @@
   color: #333;
 }
 
-.header p {
-  font-size: 18px;
-  color: #777;
-}
-
 .experience-list {
   display: flex;
   flex-direction: column;
   gap: 20px;
   margin-bottom: 80px;
-  text-align: center;
 }
 
 .experience-item {
@@ -35,6 +29,7 @@
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s, box-shadow 0.3s;
+  cursor: pointer;
 }
 
 .experience-item:hover {
