--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,13 +2,14 @@
 .footer {
   background-color: #333;
   color: #fff;
-  padding: 20px 0;
+  padding: 10px 0;
   text-align: center;
   position: fixed;
   width: 100%;
   bottom: 0;
   z-index: 1000;
   border-top: 1px solid #444;
+  flex-shrink: 0;
 }
 
 .footer .container-fluid {
@@ -30,7 +31,6 @@
 .footer-content p {
   margin: 0;
   font-size: 14px;
-  margin-bottom: 10px;
 }
 
 .social-links {
